@@ -159,6 +159,6 @@ exit;
 __DATA__
 5 colours were created
 B R V B-R B-V
-A sub-set of USNO-A2: Field centre at RA 01 10 12.9, Dec +60 04 35.9, Search Radius 1 arcminutes 
-00080  0  09 55 39  +60 07 23.6  0.000  0.000  16.4  0.4  0  16.1  0.1  0  16.3  0.3  0  0.3  0.05  0  0.1  0.02  0  
-00081  1  10 44 57  +12 34 53.5  0.000  0.000  9.3  0.2  0  9.5  0.6  0  9.1  0.1  0  0.2  0.07  0  -0.2  0.05  0  
+A sub-set of USNO-A2: Field centre at RA 01 10 12.90, Dec +60 04 35.90, Search Radius 1 arcminutes 
+00080  0  09 55 39.00  +60 07 23.60  0.000  0.000  16.4  0.4  0  16.1  0.1  0  16.3  0.3  0  0.3  0.05  0  0.1  0.02  0  
+00081  1  10 44 57.00  +12 34 53.50  0.000  0.000  9.3  0.2  0  9.5  0.6  0  9.1  0.1  0  0.2  0.07  0  -0.2  0.05  0  
