@@ -1,16 +1,23 @@
-2003-07-24  Tim Jenness  <timj@jach.hawaii.edu>
+2003-07-24  Alasdair Allan <aa@astro.ex.ac.uk>
+
+        * t/catalog.t: Tests fixed to reflect the new two decimal place
+          precisions generated by using Astro::Coords objects
+          
+2003-07-24  Tim Jenness <timj@jach.hawaii.edu>
 
 	* Catalog.pm (_read_cluster): No longer use ra() and dec() methods
 	to set the ra and dec (store the Astro::Coords object directly)
 
 	* Star/Star.pm: ra($ra) and dec($dec) methods now deprecated.
 
-2003-07-23  Tim Jenness  <timj@jach.hawaii.edu>
+        * t/1_compile.t: New tests addded.
+        
+2003-07-23  Tim Jenness <timj@jach.hawaii.edu>
 
 	* Star/Star.pm: Now uses Astro::Coords internally.
 
 	* Catalog.pm: Now uses Astro::Coords internally. Switch to lexical
-	filehandles.
+	  filehandles.
 
 2003-07-19  Alasdair Allan <aa@astro.ex.ac.uk> (version 2.1.3)
 
